basic structure of auth service still having issue